<resources>
    <string name="app_name">RideShare_0.0</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="applogo">appLogo</string>
    <string name="log_in">Log in</string>
    <string name="registerBtn">Register</string>
    <string name="nametext">nameText</string>
    <string name="create_trip">Create Trip</string>
    <string name="toBtn">TO</string>
    <string name="fromText">From</string>
    <string name="toText">To</string>
    <string name="searchBtn">Search</string>
    <string name="fromPrompt">From</string>
    <string name="destinationPropmt">Destination</string>
    <string name="driver_name">Driver Name</string>
    <string name="confirm">Confirm</string>
    <string name="nameText">Name</string>
    <string name="registerText">Register</string>
    <string name="passwordText">Password</string>
    <string name="create_accountText">Create Account</string>
    <string name="Description">Description</string>
</resources>
