<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="PostList.postTrip">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="05dp"
        android:contentDescription="@string/applogo"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/cougarid" />

    <EditText
        android:id="@+id/frmTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/fromPrompt"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/dstTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/destinationPropmt"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/D_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Description"
        android:inputType="textPersonName" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="339dp"
        android:layout_height="300dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:selectedWeekBackgroundColor="#428cc0" />


    <Button
        android:id="@+id/confrim"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:background="@drawable/edith_round"
        android:text="@string/confirm"
        android:layout_marginBottom="60dp"/>

</LinearLayout>