<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="GetList.getList">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="05dp"
        android:contentDescription="@string/applogo"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/cougarid" />

    <Button
        android:id="@+id/create_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="380dp"
        android:layout_height="35dp"
        android:background= "@drawable/edith_round"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="35dp"
        android:text="@string/create_trip"
        android:textColorLink="#008B2D2D"
        android:textSize="22sp"
        tools:ignore="LabelFor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/fromText"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/fromText"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/toText"
            android:layout_width="180dp"
            android:layout_height="58dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/toText"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchBtn"
        android:background="#428cc0"
        android:textSize="15sp"/>

    <ListView
        android:id="@+id/show_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"/>

</LinearLayout>